# llm-v3

./: .env.example  .gitignore  .gitignore   DEBUG_VISUALIZATION.md  README.md  README_LMSTUDIO.md  VISUALIZATION_IMPROVEMENTS.md  ai_analysis_debug_helper.py  ai_analysis_diagnostics.py  balanced_test.py  check_server.py  chunked_response.py  conftest.py  debug_agent_fix.py  debug_ai_analysis.py  debug_multiple_functions.py  debug_visualization_detection.py  derivative_test.py  direct_viz_client.py  docker-compose.yml  download_mistral.py  download_model.py  download_thebloke_mistral.py  final_optimized_test.py  final_solution.py  fix_workflow.py  fixed_plot_test.py  math_grapher.py  math_viz.py  max_optimized_test.py  max_performance_test.py  mini_model_test.py  multimodal_assistant.py  optimized_test.py  plot_sincos_integral.py  pyproject.toml  register_super_viz_agent.py  requirements.txt  restart_server.sh  run_server.py  (+45 more)
api/: __init__.py
config/: mongodb_config.py  rabbitmq_config.py
deployments/: production_checklist.md
docs/: nlp_visualization.md
math_processing/: visualization_integration.py
multimodal/: __init__.py
scripts/: db_backup.py  db_restore.py  demo_context_management.py  initialize_message_bus.py  make_advanced_ocr_executable.sh  make_demo_context_management_executable.sh  make_executable.sh  make_ocr_executable.sh  make_test_context_management_executable.sh  make_test_performance_optimization_executable.sh  make_ui_server_executable.sh  setup_database.py  start_test_ui_server.js  test_advanced_image_processing.py  test_agent_communication.py  test_agent_registry.py  test_chat_visualization.py  test_context_management.py  test_core_components.py  test_database.py  test_handwriting_recognition.py  test_integration.py  test_logging.py  test_math_editor_integration.js  test_math_knowledge_agent.py  test_math_ocr_enhancement.py  test_message_bus.py  test_mistral_integration.py  test_orchestration.py  test_performance_optimization.py  test_search_agent.py  test_visualization.py  validate_sprint1.py
search/: __init__.py
tests/: test_all_visualizations.py  test_central_endpoint.sh  test_input_agent.py  test_llm_router_agent.py  test_nlp_viz_endpoint.py  test_nlp_viz_specific.py  test_viz_detection.py
util/: check_workflow.py
visualization/: VISUALIZATION_README.md  (+1 more)
(+336 files in other folders)
