[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = [
    "core/tests",
    "math_processing/tests",
    "multimodal/tests",
    "visualization/tests", 
    "search/tests",
    "orchestration/tests",
    "database/tests",
    "api/tests",
    "integration_tests"
]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"