cat > pyproject.toml << 'EOF'
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = [
    "core/tests",
    "math_processing/tests",
    "multimodal/tests",
    "visualization/tests", 
    "search/tests",
    "orchestration/tests",
    "database/tests",
    "api/tests",
    "integration_tests"
]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
EOF

cat > requirements.txt << 'EOF'
# Core dependencies
torch>=2.0.0
transformers>=4.30.0
vllm>=0.1.3
pydantic>=2.0.0

# Mathematical processing
sympy>=1.11.1
numpy>=1.24.0
scipy>=1.10.0
pandas>=2.0.0

# Multimodal processing
opencv-python>=4.7.0
paddlepaddle>=2.4.2
paddleocr>=2.6.1
pillow>=9.4.0

# Visualization
matplotlib>=3.7.0
plotly>=5.13.0
seaborn>=0.12.2

# Web and API
fastapi>=0.95.0
uvicorn>=0.21.0
websockets>=11.0.0
jinja2>=3.1.2

# Database and caching
pymongo>=4.3.3
redis>=4.5.0
qdrant-client>=1.1.0

# Message bus and orchestration
pika>=1.3.0
temporal-python>=1.0.0
celery>=5.2.7

# Search
requests>=2.28.0
beautifulsoup4>=4.12.0
google-api-python-client>=2.86.0

# Testing
pytest>=7.3.0
pytest-cov>=4.1.0
hypothesis>=6.70.0

# Development
black>=23.3.0
flake8>=6.0.0
isort>=5.12.0
mypy>=1.0.0
EOF

cat > requirements-dev.txt << 'EOF'
-r requirements.txt

# Additional development tools
pre-commit>=3.3.1
black>=23.3.0
flake8>=6.0.0
isort>=5.12.0
mypy>=1.0.0
pytest>=7.3.0
pytest-cov>=4.1.0
hypothesis>=6.70.0
jupyter>=1.0.0
notebook>=6.5.0
EOF